# bc

./: Makefile  docker-compose.example.yaml
backend/: .env.default  Cargo.toml  Cross.toml  Dockerfile  build_musl.cmd
backend/src/: common.rs  config_error_handlers.rs  hash_utils.rs  jwt_stuff.rs  macros.rs  main.rs  tests.rs
backend/src/brackets/: delete.rs  edit.rs  get.rs  get_all.rs  mod.rs  new.rs  propagate_brackets.rs
backend/src/games/: delete.rs  edit.rs  get.rs  get_all.rs  mod.rs  new.rs
backend/src/teams/: delete.rs  edit.rs  get.rs  get_all.rs  leave_tournament.rs  mod.rs  new.rs
backend/src/teams/managers/: handle_invite.rs  invite.rs  mod.rs  remove.rs
backend/src/teams/players/: handle_invite.rs  invite.rs  mod.rs  remove.rs  set_playing.rs
backend/src/teams/players/playing/: get.rs  get_all.rs  mod.rs
backend/src/teams/with_players_and_managers/: get.rs  get_all.rs  mod.rs
backend/src/tournaments/: apply_for.rs  delete.rs  edit.rs  generate_brackets.rs  get.rs  get_all.rs  mod.rs  new.rs
backend/src/tournaments/playing/: get.rs  get_all.rs  mod.rs
backend/src/tournaments/signed_up_teams/: get.rs  get_all.rs  mod.rs
backend/src/tournaments/team_applications/: get.rs  get_all.rs  handle_application.rs  mod.rs
backend/src/tournaments/with_bracket_trees/: get.rs  get_all.rs  mod.rs
backend/src/tournaments/with_signed_up_teams/: get.rs  get_all.rs  mod.rs
backend/src/tournaments/with_team_applications/: get.rs  get_all.rs  mod.rs
backend/src/users/: delete.rs  edit.rs  get.rs  get_all.rs  login.rs  mod.rs  register.rs
backend/src/users/invites/: get.rs  get_all.rs  mod.rs
database/: Dockerfile  inserts.sql  procedures.sql  tables.sql  types.sql  (+2 more)
(+112 files in other folders)
