[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-web-lab = "0.20.1"
clap = { version = "4.4.12", features = ["derive", "env"] }
derive_more = "0.99.17"
dotenvy = "0.15.7"
paste = "1.0.14"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = { version = "1.0.110", features = ["raw_value"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "json"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["serde", "v4"] }

[profile.dev.package."*"]
opt-level = 3
